--- a/package.json
+++ b/package.json
@@ -19,17 +19,24 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@okta/okta-angular": "^5.2.0",
     "@okta/okta-auth-js": "^6.4.0",
     "@okta/okta-signin-widget": "^6.2.0",
+    "@popperjs/core": "^2.11.6",
+    "@stripe/stripe-js": "^1.47.0",
     "bootstrap": "4.5.2",
     "chart.js": "^4.2.1",
     "chartjs-plugin-annotation": "^2.1.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
+    "install": "^0.13.0",
     "ng2-charts": "^3.1.2",
+    "npm": "^9.5.1",
     "rxjs": "~7.5.0",
+    "stripe": "^8.179.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
