--- a/package.json
+++ b/package.json
@@ -10,47 +10,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/material": "^15.1.5",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/animations": "^15.2.0",
+    "@angular/common": "^15.2.0",
+    "@angular/compiler": "^15.2.0",
+    "@angular/core": "^15.2.0",
+    "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.0",
+    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/router": "^15.2.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
-    "@okta/okta-angular": "^5.2.0",
-    "@okta/okta-auth-js": "^6.4.0",
-    "@okta/okta-signin-widget": "^6.2.0",
+    "@okta/okta-angular": "^6.0.0",
+    "@okta/okta-auth-js": "^7.2.0",
+    "@okta/okta-signin-widget": "^7.3.1",
     "@popperjs/core": "^2.11.6",
     "@stripe/stripe-js": "^1.47.0",
-    "bootstrap": "4.5.2",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "chartjs-plugin-annotation": "^2.1.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "css-loader": "^6.7.3",
     "date-fns": "^2.29.3",
     "install": "^0.13.0",
-    "ng2-charts": "^3.1.2",
+    "ng2-charts": "^4.1.1",
     "npm": "^9.5.1",
-    "rxjs": "~7.5.0",
-    "stripe": "^8.179.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.8.0",
+    "stripe": "^11.12.0",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.7",
-    "@angular/cli": "~14.0.7",
-    "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "@angular-devkit/build-angular": "^15.2.0",
+    "@angular/cli": "~15.2.0",
+    "@angular/compiler-cli": "^15.2.0",
+    "@types/jasmine": "~4.3.1",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.5"
   }
 }
